[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
indicatif = "0.18"
good_lp = {version = "1.14.1", features = ["microlp"], default-features = false }

[dev-dependencies]
rstest = "0.26"
criterion = "0.8"

[[bench]]
name = "all_days"
harness = false

[profile.bench]
debug = true